--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -1,4 +1,21 @@
 <section>
+    
+    <a href="http://itunes.apple.com/us/podcast/the-food-fight-show/id495577922#"><img src="/images/itunes.png" alt="Subscribe with iTunes" /></a>
+    <a href="http://feeds.feedburner.com/TheFoodFightShow"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>    
+    <a href="https://twitter.com/#!/foodfightshow"><img src="/images/feed_twitter.png" alt="Subscribe with iTunes" /></a>
+    
+    <h1>DevOps Links</h1>
+
+    <ul>
+    <li><a href="http://github.com/foodfight">FoodFightShow on Github</a></li>
+    <li><a href="http://devopsweekly.com/">DevOps Weekly Newsletter</a></li>
+    <li><a href="http://devopscafe.org/">DevOps Cafe</a></li>
+    <li><a href="http://jedi.be/">Patrick DeBois, the Godfather of DevOps</a></li>
+    <li><a href="http://dev2ops.com/">http://dev2ops.com</a></li>
+    </ul>
+    
+    <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/OC_Chef_Logo.png" /></a>
+    
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
     {% for post in site.posts limit: site.recent_posts %}
