--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -4,7 +4,7 @@
     <a href="http://itunes.apple.com/us/podcast/the-food-fight-show/id495577922#"><img src="/images/itunes.png" alt="Subscribe with iTunes" /></a>
     <a href="http://feeds.feedburner.com/TheFoodFightShow"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>    
     <a href="https://twitter.com/#!/foodfightshow"><img src="/images/feed_twitter.png" alt="Subscribe with iTunes" /></a>
-    <!-- Flattr button - need to add correct URL <a href="#"><img src="/images/support-with-flattr_button.png" alt="Support with Flattr" /></a> -->
+    <a href="http://flattr.com/thing/733271/foodfightshow-on-Flattr"><img src="/images/support-with-flattr_button.png" alt="Support with Flattr" /></a>
     
     <h1>DevOps Links</h1>
 
