--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -13,7 +13,7 @@
     <li><a href="http://devopsweekly.com/">DevOps Weekly Newsletter</a></li>
     <li><a href="http://devopscafe.org/">DevOps Cafe</a></li>
     <li><a href="http://jedi.be/">Patrick DeBois, the Godfather of DevOps</a></li>
-    <li><a href="http://dev2ops.com/">http://dev2ops.com</a></li>
+    <li><a href="http://dev2ops.org/">http://dev2ops.org</a></li>
     </ul>
     
     <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/OC_Chef_Logo.png" /></a>
