newsletter button, fixed devops link, clearer links on sidebar

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -4,6 +4,7 @@ div#content {background:#fff;}
 .floatright {float:right; margin:0 0 1em 1em;}
 .floatleft {float:left; margin:0 1em 1em 0;}
 .clearboth {clear:both;}
+aside.sidebar a {text-decoration:none; color: rgb(24, 99, 161);}
 
 aside.sidebar img, aside.sidebar li {
 -webkit-border-radius: 0;
