--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -6,6 +6,11 @@
     <a href="https://twitter.com/#!/foodfightshow"><img src="/images/feed_twitter.png" alt="Subscribe with iTunes" /></a>
     <a href="http://flattr.com/thing/733271/foodfightshow-on-Flattr"><img src="/images/support-with-flattr_button.png" alt="Support with Flattr" /></a>
     <a href="http://bit.ly/ffsmail"><img src="/images/subscribe-to-newsletter_button.png" alt="Subscribe to Newsletter" /></a>
+
+    <h1>Newsletter Archives</h1>
+    <ul>
+      <li><a href="http://eepurl.com/tGEI1">Issue 1</a></li>
+    </ul>
     
     <h1>DevOps Links</h1>
 
