--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -2,7 +2,7 @@
     
     <!-- NOTE: Adding the custom links to the asides/recent_posts.html for now as Octopress doesn't seem to pick up my default custom/asides/home.html template set in _config.yml -->
     <a href="http://itunes.apple.com/us/podcast/the-food-fight-show/id495577922#"><img src="/images/itunes.png" alt="Subscribe with iTunes" /></a>
-    <a href="http://feeds.feedburner.com/TheFoodFightShow"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>    
+    <a href="/atom.xml"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>    
     <a href="https://twitter.com/#!/foodfightshow"><img src="/images/feed_twitter.png" alt="Subscribe with iTunes" /></a>
     <a href="http://flattr.com/thing/733271/foodfightshow-on-Flattr"><img src="/images/support-with-flattr_button.png" alt="Support with Flattr" /></a>
     <a href="http://bit.ly/ffsmail"><img src="/images/subscribe-to-newsletter_button.png" alt="Subscribe to Newsletter" /></a>
