Swap out the Chef logo for the current one

--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -16,7 +16,7 @@
     <li><a href="http://dev2ops.org/">http://dev2ops.org</a></li>
     </ul>
     
-    <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/OC_Chef_Logo.png" /></a>
+    <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/Chef_Vertical_Reg_Without.png" /></a>
     
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
