--- a/source/_includes/custom/asides/home.html
+++ b/source/_includes/custom/asides/home.html
@@ -11,5 +11,5 @@
 <li><a href="http://dev2ops.com/">http://dev2ops.com</a></li>
 </ul>
 
-<a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/OC_Chef_Logo.png" /></a>
+<a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/Chef_Vertical_Reg_Without.png" /></a>
 </section>
