Update the sidebar links

--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -5,15 +5,18 @@
     <a href="/atom.xml"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>    
     <a href="https://twitter.com/#!/foodfightshow"><img src="/images/feed_twitter.png" alt="Subscribe with iTunes" /></a>
     
-    <h1>DevOps Links</h1>
+    <h1>Links</h1>
 
     <ul>
-    <li><a href="http://github.com/foodfight">FoodFightShow on Github</a></li>
-    <li><a href="http://devopsweekly.com/">DevOps Weekly Newsletter</a></li>
-    <li><a href="http://devopscafe.org/">DevOps Cafe</a></li>
-    <li><a href="http://jedi.be/">Patrick DeBois, the Godfather of DevOps</a></li>
-    <li><a href="http://dev2ops.org/">http://dev2ops.org</a></li>
+      <li><a href="http://github.com/foodfight">FoodFightShow on Github</a></li>
+      <li><a href="http://devopsweekly.com/">DevOps Weekly Newsletter</a></li>
+      <li><a href="http://devopscafe.org/">DevOps Cafe</a></li>
+      <li><a href="http://theshipshow.com/">The Ship Show</a></li>
+      <li><a href="http://www.opsallthethings.com/">Ops All The Things</a></li>
+      <li><a href="http://www.arresteddevops.com/">Arrested DevOps</a></li>
+      <li><a href="http://jedi.be/">Patrick DeBois, the Godfather of DevOps</a></li>
     </ul>
+
     
     <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/Chef_Vertical_Reg_Without.png" /></a>
     
