--- a/source/_includes/custom/asides/home.html
+++ b/source/_includes/custom/asides/home.html
@@ -1,14 +1,16 @@
 <section>
 <a href="http://itunes.apple.com/us/podcast/the-food-fight-show/id495577922#"><img src="/images/itunes.png" alt="Subscribe with iTunes" /></a>
 
-<h1>DevOps Links</h1>
+<h1>Links</h1>
 
 <ul>
 <li><a href="http://github.com/foodfight">FoodFightShow on Github</a></li>
 <li><a href="http://devopsweekly.com/">DevOps Weekly Newsletter</a></li>
 <li><a href="http://devopscafe.org/">DevOps Cafe</a></li>
+<li><a href="http://theshipshow.com/">The Ship Show</a></li>
+<li><a href="http://www.opsallthethings.com/">Ops All The Things</a></li>
+<li><a href="http://www.arresteddevops.com/">Arrested DevOps</a></li>
 <li><a href="http://jedi.be/">Patrick DeBois, the Godfather of DevOps</a></li>
-<li><a href="http://dev2ops.com/">http://dev2ops.com</a></li>
 </ul>
 
 <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/Chef_Vertical_Reg_Without.png" /></a>
