--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -1,10 +1,17 @@
 <section>
-    
+
     <!-- NOTE: Adding the custom links to the asides/recent_posts.html for now as Octopress doesn't seem to pick up my default custom/asides/home.html template set in _config.yml -->
     <a href="http://itunes.apple.com/us/podcast/the-food-fight-show/id495577922#"><img src="/images/itunes.png" alt="Subscribe with iTunes" /></a>
-    <a href="/atom.xml"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>    
+    <a href="/atom.xml"><img src="/images/feed_rss.png" alt="Subscribe with RSS" /></a>
     <a href="https://twitter.com/#!/foodfightshow"><img src="/images/feed_twitter.png" alt="Subscribe with iTunes" /></a>
-    
+
+    <h1>Upcoming Events</h1>
+    <ul>
+      <li><a href="http://getchef.com/summit">Chef Community Summit</a></li>
+      <li><a href="http://getchef.com/summit-london">Chef Community Summit London</a></li>
+      <li><a href="http://devopsdays.org/events/2014-chicago/">DevOpsDays Chicago</a></li>
+    </ul>
+
     <h1>Links</h1>
 
     <ul>
@@ -17,9 +24,9 @@
       <li><a href="http://jedi.be/">Patrick DeBois, the Godfather of DevOps</a></li>
     </ul>
 
-    
+
     <a href="http://wiki.opscode.com/" title="Chef Wiki at Opscode."><img src="/images/Chef_Vertical_Reg_Without.png" /></a>
-    
+
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
     {% for post in site.posts limit: site.recent_posts %}
